perf: replace jackson-databind with a hand-rolled JSON codec (#16)
jackson-databind pulled in ~3,000 reachable methods and transitively
~4.6 MB of java.xml at native-image build time, all to read/write the
small fixed-shape OCI spec and state.json files takoyaki touches. The
new approach is two ~250-line classes in util/json/ — a recursive-
descent parser producing a Map/List/String/Long/Double/Boolean tree,
and a writer for the same — plus a JsonMap helper with typed accessors.
Each bean (Spec + 21 nested classes, State, KontainerConfig) gets a
static fromJson(Object) decoder and instance toJson() encoder, ~30
lines each. No reflection, no annotations, no service loaders.

Result (aarch64, ./build/native/nativeCompile/takoyaki, -Pquick):
  binary file size :  37.1 MB → 24.2 MB  (-12.9 MB,  -35 %)
  image heap       :  13.7 MB →  9.9 MB  ( -3.8 MB,  -28 %)
  code area        :  21.9 MB → 13.1 MB  ( -8.8 MB,  -40 %)
  compilation units: 16,924   → 10,362   (-6,562,  -39 %)
  java.xml         :   4.6 MB → 0
  --version wall   :   117 ms →  106 ms  ( -11 ms, median of 10)

`./gradlew test`: 254 passed, 0 failed (includes 12 new
JsonRoundtripTest cases).

Co-authored-by: ternbusty <sacrament.dev@gmail.com>